k8s/abcall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abcall-ingress
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ms-abcall-agentes-service
                port:
                  number: 8080
            path: /service/abcall/agentes/v1
            pathType: Prefix
          - backend:
              service:
                name: ms-abcall-clientes-service
                port:
                  number: 8080
            path: /service/abcall/clientes/v1
            pathType: Prefix
          - backend:
              service:
                name: ms-abcall-ia-service
                port:
                  number: 8080
            path: /service/abcall/ia/v1
            pathType: Prefix
          - backend:
              service:
                name: ms-abcall-incidentes-service
                port:
                  number: 8080
            path: /service/abcall/incidentes/v1
            pathType: Prefix
          - backend:
              service:
                name: ms-abcall-reporteria-service
                port:
                  number: 8080
            path: /service/abcall/reporteria/v1
            pathType: Prefix
          - backend:
              service:
                name: ms-abcall-auth-service
                port:
                  number: 8080
            path: /service/abcall/auth/v1
            pathType: Prefix
